[workspace]
members = [
    "programs/*"
]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

[workspace.dependencies]
anchor-lang = "0.30.1"
base64 = { version = "0.22.1", default-features = false }
serde_json = { version = "1.0.128", default-features = false }

nymbus = { path = "programs/nymbus" }
